--- a/1Introduction.tex
+++ b/1Introduction.tex
@@ -1,29 +1,76 @@
 \newpage
 \section{Introduction}
 
-The countries in the Andean Region (Bolivia, Colombia, Chile, Ecuador,Peru and Venezuela) represent a common language block in South America.
- 
-Historically they have also made part of common trading blogs (Andean Community, Comunidad Andina (CAN) in Spanish).
-They share similar social conditions and goals for scientific and cultural development.
-\\
+In the proposal to start the Andean Regional Office of Astronomy for
+Development (ROAD), submitted on November 2, 2014, we wrote the following:
 
-The astronomical development in each of these countries can be efficiently achieved through regional cooperation. With the leadership of Chile in aspects of professional astronomy and Colombia for public outreach, it is possible to develop strategies to strengthen the professional research, education and popularization of astronomy in the Andean region.
-\\
+\begin{quote}
+The countries in the Andean Region (Bolivia, Colombia, Chile,
+ Ecuador,Peru and Venezuela) represent a common language block in
+ South America. 
+ Historically they have also made part of common trading blogs (Andean
+ Community, Comunidad Andina (CAN) in Spanish). 
+They share similar social conditions and goals for scientific and
+ human developmen development. 
 
-This development effort requires the commitment and shared effort from different institutions.
-\\
 
-An Andean Regional Office of Astronomy for Development (ROAD) can serve this goal. It will strengthen ongoing collaboration efforts, create channels of communication and develop new strategies to exchange knowledge and human resources in the region. 
-\\
+The astronomical development in each of these countries can be
+efficiently achieved through regional cooperation. 
+With the leadership of Chile in aspects of professional astronomy and
+Colombia for public outreach, it is possible to develop strategies to
+strengthen the professional research, education and popularization of
+astronomy in the Andean region. 
 
-The participating institutions have been involved in different projects in each one of the ROAD core areas: research, schools and children and public. However, the participation and degree of commitment has not been homogeneous across the region, or even inside the same country.
-\\
+This development effort requires the commitment and shared effort from
+different institutions. 
+An Andean Regional Office of Astronomy for Development (ROAD) can
+serve this goal. It will strengthen ongoing collaboration efforts,
+create channels of communication and develop new strategies to
+exchange knowledge and human resources in the region.  
 
-Therefore our main goal is to guarantee and strengthen effective methods of communication between the representatives and coordinators of global, regional and local projects implemented in the Andean countries, specially looking to orient and advise new working groups
-in other cities and regions. This lead us to define the following objectives.
- 
 
-\newpage
+The participating institutions have been involved in different
+projects in each one of the ROAD core areas: research, schools and
+children and public. However, the participation and degree of
+commitment has not been homogeneous across the region, or even inside
+the same country. 
+
+
+Therefore our main goal is to guarantee and strengthen effective
+methods of communication between the representatives and coordinators
+of global, regional and local projects implemented in the Andean
+countries, specially looking to orient and advise new working groups 
+in other cities and regions. This lead us to define the following
+objectives
+
+\begin{itemize}
+\item Foster the goals of the International Astronomical Union (IAU)
+Strate- gic Plan in the Andean region. 
+
+\item Serve as partner to the Office of Astronomy for Development (OAD),
+the IAU and other international organizations to plan and implement
+relevant projects in the Andean region. 
+\item Create public forums where the project management of all
+development activities can be communicated and evaluated. 
+\item Initiate and coordinate fund-raising activities for regional
+development activities. 
+\item Create new institutional alliances among countries in the region
+to exchange knowledge and human resources. 
+
+\end{itemize}
+
+\end{quote} 
+
+To reach those objectives we suggested a series of specific projects and tasks. 
+In this report we evaluate to what extent those task were succesfuly
+completed.
+
+The following score card grades each task from 0 (unfulfilled) to 10
+(completely fullfilled). We give a grade of $2$ to tasks that were
+started but did not continue. We give a grade of $6$ to tasks that
+advanced and gave positive results only for a fraction of the
+institutions participating in the Andean ROAD.
+
 \section{Score Card}
 
 \begin{table}[!h]
@@ -32,19 +79,21 @@ in other cities and regions. This lead us to define the following objectives.
 Task Force & Project & Score (0-10)\\\hline
 1 & Andean School On Astronommy Astrophysics & 6\\
 1 & Andean Graduate Program & 0 \\
-1 & Exploration Working Group in Astroparticle Physics & 5\\
-1 & Exploration Working Group in Radioastronomy & 5\\
-1 & Massive Oopen Online Courses & 0 \\ 
+1 & Exploration Working Group in Astroparticle Physics & 6\\
+1 & Exploration Working Group in Radioastronomy & 6\\
+1 & Massive Open Online Courses & 0 \\ 
 1-2-3 & Communitacion Network & 10\\
 2  & Periodic Coordination Sessions & 2\\
 2 & Virtual Training Sessions & 2\\
-2 & Teaching Material for Visually Impaired Students & 5\\
+2 & Teaching Material for Visually Impaired Students & 6\\
 2 & Annual TF2 Meeting & 2\\
-3 & Development for planetariusm & 0\\
-3 & Communicating Astronomy with the Public & 2\\\hline
- & \textbf{Average} & 3.25\\ 
+3 & Development for planetariums & 0\\
+3 & Regional Communicating Astronomy with the Public & 2\\\hline
+ & \textbf{Average} & 3.33\\ 
 \end{tabular}
 \end{center}
+
+In the following section we present more details about each project.
 \end{table}
 
 
