--- a/2TF1.tex
+++ b/2TF1.tex
@@ -5,57 +5,83 @@
 
 
 \subsection{Andean School on Astronomy and Astrophysics}
-\textbf{Objective} Organize a school for advanced undergraduate students and graduate students.
+\textbf{Objective} Organize a school for advanced undergraduate
+students and graduate students.  
 \\
-\textbf{Contact:} Changes every year.
+\textbf{Lead:} Changes every year. 
 \\
 \textbf{Planned Implementation:} 
-Every year we will hold a school aimed at advanced undergraduate students and graduate students. 
-The main subjects of the school have to be broad enough allowing a large student participation. 
-This venue will also serve as a upstanding scenario to invite tutors from abroad and strengthen new institutional collaborations with the Andean ROAD. 
-The first school will take place in 2014 hosted in Ecuador close to the dates for the Colombian Congress of Astronomy and Astrophysics.
+Every year we will hold a school aimed at advanced undergraduate
+students and graduate students.  
+The main subjects of the school have to be broad enough allowing a
+large student participation.  
+This venue will also serve as a upstanding scenario to invite tutors
+from abroad and strengthen new institutional collaborations with the
+Andean ROAD.  
+The first school will take place in 2014 hosted in Ecuador close to
+the dates for the Colombian Congress of Astronomy and Astrophysics. 
 
 \subsubsection{Results}
 
-We managed to organize three schools in Quito (2014), Bogot\'a (2015) and Lima (2018). 
+We managed to organize three schools in Quito (2014), Bogot\'a (2015)
+and Lima (2018).  
 
-The first school in Quito (2014) was lead by Prof. Nicol\'as V\'asquez at the Escuela Polit\'ecnica Nacional. 
-The school had [XX] students from [COUNTRIES] and [XX] instructors from [COUNTRIES]. 
+The first school in Quito (2014) was lead by Prof. Nicol\'as V\'asquez
+at the Escuela Polit\'ecnica Nacional.  
+The school had [XX] students from [COUNTRIES] and [XX] instructors
+from [COUNTRIES].  
 The dates of the school were [XXX] and the main teaching subjects were [XXX].
 
 The second school took place in Bogota (June 1 through June 26, 2015). 
-It was lead by Prof. Jaime E. Forero-Romero at Universidad de los Andes. 
-The school had [XX] students from [COUNTRIES] and four instructors from working in 
-different countries GGermany (Potsdam Astrophysical Institute), 
+It was lead by Prof. Jaime E. Forero-Romero at Universidad de los
+Andes (\url{http://forero.github.io/AndeanCosmologySchool/}). 
+The school had 18  students from Bolivia, Colombia, Chile, Ecuador,
+Peru and Venezuela.
+It had four instructors working in Germany (Potsdam Astrophysical Institute), 
 Israel (Hebrew University) and the United States (Caltech and Berkeley Lab)
-The main subject was cosmology in four aspects: theory, simulations, experiment and intrumentation.
+The main subject was cosmology in four aspects: theory, simulations,
+experiment and intrumentation. 
 
-The third school was held in Lima (November 12-16, 2018)
+The third school was held in Lima (November 12-16, 2018) 
 It took place within the third workshop \emph{Astronom\'ia en los Andes}. 
-It was lead by Prof. Maria Isela Zevallos from the Universidad Nacional de Ingenier\'ia.
-The schoold had [XX] students from [COUNTRIES] and [XX] instructores 
+It was lead by Prof. Maria Isela Zevallos from the Universidad
+Nacional de Ingenier\'ia. The schoold had [XX] students from
+[COUNTRIES] and [XX] instructors   
+The school had the following courses
+
+\begin{enumerate}
+    \item  Milky Way Structure and Evolution. Dr. Dante Minniti Universidad Andrés Bello (UNAB, Chile).
+    \item "Astronomical Techniques in Planetary Sciences". Dr. Gonzalo Tancredi (University of Uruguay, Uruguay).
+    \item "Astronomy in the School". Dr. Paulo Sergio Bretones (UFSC, Brazil).
+\end{enumerate}
+
+For this school the biggest challenge was to get participation from
+researchers, amateurs and students from all the Andean ROAD
+countries. No participants came from Bolivia, nor from Chile.  
+The most numerous participation was that of university students
+followed by that of the fans and, finally, the professors. 
+The scientific community in Astronomy in Peru is small, but most of
+them attended.   
 
 
 
-\subsubsection{Challenges}
-
-The biggest challenge was to secure stable funding to organize every school.
- 
-The first school relied entirely on local funding.
+The biggest challenge for all schools was to secure stable funding.
+ The first school relied entirely on local funding.
 The second school the central OAD office sponsored the
 accommodation for the 15 students from Ecuador, Venezuela, 
 Bolivia and Chile, which represented close to $20\%$ of the total expenses.
-For the third school the Andean ROAD sponsored the accommodation for 10 students from 
-Ecuador, Colombia, Venezuela, Argentina and Peru, which represented close to $10\%$ of the total expenses.
+For the third school the Andean ROAD sponsored the accommodation for
+10 students from  Ecuador, Colombia, Venezuela, Argentina and Peru,
+which represented close to $10\%$ of the total expenses. 
 
-Pulling together every school required a large effort from the Local
+Putting together every school required a large effort from the Local
 Organizing Committee to secure the funding from local organizations.
-This instability made it difficult for us to continue with the desired annual periodicity.
-
+This instability made it difficult for us to continue with the desired
+annual periodicity. 
 
  
- 
-%Since the website of the Third Workshop, \url{http://vri.uni.edu.pe/index.php/3waa/} is not fully active.
+%Since the website of the Third Workshop, 
+%\url{http://vri.uni.edu.pe/index.php/3waa/} is not fully active.
 %\newline    
 %\\
 %\textbf{Scientific Committee.}
@@ -92,65 +118,118 @@ This instability made it difficult for us to continue with the desired annual pe
 %#######################################################
 
 \subsection{Andean Graduate Program}
-\textbf{Objective} Determine the feasibility of creating and funding an Andean graduate program.
+\textbf{Objective} Determine the feasibility of creating and funding
+an Andean graduate program. 
 \\
-\textbf{Leading ROAD Institutions:} Observatorio Astronómico Nacional (Colombia); SOCHIAS ROAD Office (Chile, Oficina Nacional de Coordinación, ONC); Universidad de San Francisco de Quito (Ecuador).
+\textbf{Leading ROAD Institutions:} Observatorio Astronómico Nacional
+(Colombia); SOCHIAS ROAD Office (Chile, Oficina Nacional de
+Coordinación, ONC); Universidad de San Francisco de Quito (Ecuador). 
 \\
-\textbf{Contacts:} Giovanni Pinzón, PhD; Eduardo Unda-Sanzana, PhD; Dennis Cazar Ramírez, PhD.  
+\textbf{Lead:} Giovanni Pinzón, PhD; Eduardo Unda-Sanzana, PhD;
+Dennis Cazar Ramírez, PhD.   
 \\
-\textbf{Implementation:} Explore the possibility to coordinate the use of educational resources of different institutions in the region. The model for this project is the AstroMundus program in the European Union where a consortium of 5 Universities in 4 Countries offer a Master Program. This research will be done mainly through virtual meetings. 
+\textbf{Implementation:} Explore the possibility to coordinate the use
+of educational resources of different institutions in the region. The
+model for this project is the AstroMundus program in the European
+Union where a consortium of 5 Universities in 4 Countries offer a
+Master Program. This research will be done mainly through virtual
+meetings.  
 
 
-\subsection{Results}
-This project did not fulfill its objective.
+\subsubsection{Results}
+The project  did not make any significant progress towards reaching its
+objective.  
+
 
 %#######################################################
 
 \subsection{Exploration Working Group in Astroparticle Physics}
-\textbf{Objective} Establish a cooperation network of institutions interested in Astroparticle Physics.
+\textbf{Objective} Establish a cooperation network of institutions
+interested in Astroparticle Physics. 
 \\
 \textbf{Leading ROAD Institution:} Universidad Industrial de Santander (Colombia); Universidad San Francisco de Quito (Ecuador). 
 \\
-\textbf{Contact:} Luis Nuñez, PhD.; Dennis Cazar Ramírez, PhD.
+\textbf{Lead:} Luis Nuñez, PhD.; Dennis Cazar Ramírez, PhD.
 \\
-\textbf{Implementation:} The leading institutions will organize periodic meetings to gather all the groups in the Andean Region interested in developing its research capabilities in astroparticle physics. This will be done through workshops and the installations of small research stations for the Latin American Giant Observatory (LAGO) project, which has already been kick-started in Venezuela, Colombia, Ecuador, Peru and Bolivia.
+\textbf{Implementation:} The leading institutions will organize
+periodic meetings to gather all the groups in the Andean Region
+interested in developing its research capabilities in astroparticle
+physics. This will be done through workshops and the installations of
+small research stations for the Latin American Giant Observatory
+(LAGO) project, which has already been kick-started in Venezuela,
+Colombia, Ecuador, Peru and Bolivia. 
 
 \subsubsection{Results}
-At the Escuela Politécnica Nacional of Quito Ecuador it was created the \href{http://201.159.223.36/poli/index.php}{astroparticles laboratory}. Also, the institution continue working with the \href{http://lagoproject.net/}{Colaboración Lago}, this collaboration is presided by Ivan Sidelnick. %\email{ivan.sidelnik@gmail.com}.
+At the Escuela Politécnica Nacional of Quito Ecuador it was created
+the \href{http://201.159.223.36/poli/index.php}{astroparticles
+  laboratory}. Also, the institution continue working with the
+\href{http://lagoproject.net/}{Colaboración Lago}, this collaboration
+is presided by Ivan Sidelnick. %\email{ivan.sidelnik@gmail.com}. 
 
-In Ecuador, in the National Polytechnic School was created the Ecuatorian Network of Cosmic Rays, Astroparticles and Space Weather with the particpitacion of the National Polytechnic School, San Francisco University of Quito and the Chimborazo Polytechnic School. \href{Astroparticle Laboratory of the  National Polytechnic School}{http://201.159.223.36/poli/index.php}
+In Ecuador, in the National Polytechnic School was created the
+Ecuatorian Network of Cosmic Rays, Astroparticles and Space Weather
+with the particpitacion of the National Polytechnic School, San
+Francisco University of Quito and the Chimborazo Polytechnic
+School. \href{Astroparticle Laboratory of the  National Polytechnic
+  School}{http://201.159.223.36/poli/index.php} 
 %Another teacher of this network is working at Yachat Tech.
 
-Also, it was organized in Quito the VII School of Cosmic Rays and Astroparticles by Oscar Saavedra, on August 2017.
+Also, it was organized in Quito the VII School of Cosmic Rays and
+Astroparticles by Oscar Saavedra, on August 2017. 
 \\
-In the 2020 will be the VIII School of Cosmic Rays and Astroparticles in Bolivia, the organizer is Martín Alfonso Subieta %\email{martin.alfonso.subieta.vasquez@cern.ch}.
+In the 2020 will be the VIII School of Cosmic Rays and Astroparticles
+in Bolivia, the organizer is Martín Alfonso Subieta
+%\email{martin.alfonso.subieta.vasquez@cern.ch}. 
 
 
 %#######################################################
 
 
 \subsection{Exploration Working Group in Radioastronomy}
-\textbf{Objective} Establish a cooperation network of institutions interested in the development of Radioastronomy.
+\textbf{Objective} Establish a cooperation network of institutions
+interested in the development of Radioastronomy. 
 \\
-\textbf{Leading ROAD Institution:} Escuela Colombiana de Carreas Industriales (Colombia).
+\textbf{Leading ROAD Institution:} Escuela Colombiana de Carreas
+Industriales (Colombia). 
 \\
-\textbf{Contact:} Germán Chaparro Molano, PhD. 
+\textbf{Lead:} Germán Chaparro Molano, PhD. 
 \\
-\textbf{Implementation:} The Leading Institution will organize periodic meetings to gather all the groups in the Andean Region interested in the development of Radioastronomy capabilities. The first meeting is planned for 2015 The Leading Institution will also organize a Training School to build up new capabilities and strengthen the ties between different groups and countries. The first school is planned for 2016.
+\textbf{Implementation:} The Leading Institution will organize
+periodic meetings to gather all the groups in the Andean Region
+interested in the development of Radioastronomy capabilities. The
+first meeting is planned for 2015 The Leading Institution will also
+organize a Training School to build up new capabilities and strengthen
+the ties between different groups and countries. The first school is
+planned for 2016. 
 
 \subsubsection{Results}
 In radioastronomy was consolidated a work network between Universities of Chile and Colombia.
-These universities are:
+These universities are: 
 \begin{enumerate}
-    \item Industrial University of Santander (UIS) with the contact of Professor Julián Rodríguez
+    \item Industrial University of Santander (UIS) with the contact of
+      Professor Julián Rodríguez 
     \item ECCI University, contact Professor Germán Chaparro and Oscar Restrepo.
-    \item University of Chile, Contact Professor Patricio Mena and Oscar Restrepo.
-    \item Catholic University of La Santisima Concepción, Professor Ricardo Bustos
+    \item University of Chile, Contact Professor Patricio Mena and
+      Oscar Restrepo. 
+    \item Catholic University of La Santisima Concepción, Professor
+      Ricardo Bustos 
 \end{enumerate}
 
-With the previous group of researchers, it was possible established a work network and began on a joint project that was presented to the National Spectrum Agency (ANE), this project was approved and is already in execution. As part of the participation from Chile, the participation of Professor Ricardo Bustos in the IX International Congress "Spectrum for sustainable development" organized by the ANE in September 2019 was achieved. In this participation, the network created and the work was commented on Future to develop in Colombia in the field of Radio astronomy.
+With the previous group of researchers, it was possible established a
+work network and began on a joint project that was presented to the
+National Spectrum Agency (ANE), this project was approved and is
+already in execution. As part of the participation from Chile, the
+participation of Professor Ricardo Bustos in the IX International
+Congress "Spectrum for sustainable development" organized by the ANE
+in September 2019 was achieved. In this participation, the network
+created and the work was commented on Future to develop in Colombia in
+the field of Radio astronomy. 
 
-Besides the participation of Professor Ricardo in the Congress, there was also participation of Professor Julián Rodríguez (UIS) who spoke among other things about political needs as a Country for the regulation of the use of the radio spectrum in the field of Radio Astronomy.
+Besides the participation of Professor Ricardo in the Congress, there
+was also participation of Professor Julián Rodríguez (UIS) who spoke
+among other things about political needs as a Country for the
+regulation of the use of the radio spectrum in the field of Radio
+Astronomy. 
 
 
 
@@ -161,22 +240,34 @@ Besides the participation of Professor Ricardo in the Congress, there was also p
 
 
 \subsection{Massive Open Online Courses - MOOC}
-\textbf{Objective} Create a Massive Open Online Course at the introductory undergraduate level with sections for the general public.
-\\
-\textbf{Leading ROAD Institution:} Universidad Industrial de Santander (Colombia).
-\\
-\textbf{Contact: }Luis Nuñez, PhD 
-\\
-\textbf{Implementation:} We will create a Massive Online Open Course in Astronomy and Astrophysics, that could be used either as a general course for a wide audience or as an introductory course for undergraduate students of Physics programs. Planned for 14 weeks, the course will contain four major blocks: Astronomy and celestial bodies, Instrumentation in Astronomy, Current Trends in Astronomy and Astrophysics, and Data Bases and Data analysis in Astronomy. The first three blocks will be divided in two modules corresponding to two different levels: A and B. General audience could follow the level A for the three modules and physics students should follow whole content of the course.
-Each module, will have a 15m video, recommended reading and several assignments.
-\\
-The Polytechnic National School of Ecuador is participating in the CARA purpouse with Nicole S. Van del Bielk from the Astronomical Curriculum of the Andean Region (CARA))
+\textbf{Objective} Create a Massive Open Online Course at the
+introductory undergraduate level with sections for the general
+public. \\
+\textbf{Leading ROAD Institution:} Universidad Industrial de Santander
+(Colombia). \\
+\textbf{Lead: }Luis Nuñez, PhD  \\
+\textbf{Implementation:} We will create a Massive Online Open Course
+in Astronomy and Astrophysics, that could be used either as a general
+course for a wide audience or as an introductory course for
+undergraduate students of Physics programs. Planned for 14 weeks, the
+course will contain four major blocks: Astronomy and celestial bodies,
+Instrumentation in Astronomy, Current Trends in Astronomy and
+Astrophysics, and Data Bases and Data analysis in Astronomy. The first
+three blocks will be divided in two modules corresponding to two
+different levels: A and B. General audience could follow the level A
+for the three modules and physics students should follow whole content
+of the course. 
+Each module, will have a 15m video, recommended reading and several
+assignments. 
+\\ 
 
 %#######################################################
 
-\subsection{Results}
+\subsubsection{Results}
 
-This project was not implemented.
+The project  did not make any significant progress towards reaching its
+objective.  
+
 
 
 \subsection{Communication Network}
@@ -184,51 +275,18 @@ This project was not implemented.
 \\
 \textbf{Leading ROAD Institution:} Universidad de los Andes (Colombia)
 \\
-\textbf{Contact:} Jaime E. Forero-Romero, PhD
+\textbf{Lead:} Jaime E. Forero-Romero, PhD
 \\
 \textbf{Implementation:} Open a mailing list associated to TF1 activities.
 \\
-This network will serve as a platform to exchange information concerning joint projects, fellowships, scholarships and open positions. There will also be a central web-page for the Andean ROAD showing the current ongoing projects and advances.
+This network will serve as a platform to exchange information
+concerning joint projects, fellowships, scholarships and open
+positions. There will also be a central web-page for the Andean ROAD
+showing the current ongoing projects and advances. 
 
-\subsection{Results}
-We created three different mailing lists, one for each Task Force. The mailing lists continue to be active 
-and are the main comnunication channel across the collaboration.
-
-
-
-\subsection{The Andean Workshop}
-Since November 2017, it was established the organization of the Third Astronomy Workshop in Los Andes. This workshop was held in Lima from November 12 to 16, 2018, in the Auditorium of the Faculty of Sciences of the National University of Engineering. Although there were 3 mini courses, two of them belonging to TF1 (Research and Universities) and the third one belonging to TF2, it was not a school itself, the mini courses were:
-
-\begin{enumerate}
-    \item  Milky Way Structure and Evolution. Dr. Dante Minniti Universidad Andrés Bello (UNAB, Chile).
-    \item "Astronomical Techniques in Planetary Sciences". Dr. Gonzalo Tancredi (University of Uruguay, Uruguay).
-    \item "Astronomy in the School". Dr. Paulo Sergio Bretones (UFSC, Brazil).
-\end{enumerate}
-They also participated as guests:
-\begin{itemize}
-    \item Dr. Susana Deustua (Space Telescope Science Institute, United States).
-    \item Dr. Jaime Forero (Los Andes University, Colombia)
-    \item Dr. Ericson López (Astronomical Observatory of Quito)
-\end{itemize}
+\subsubsection{Results}
+We created three different mailing lists, one for each Task Force. The
+mailing lists continue to be active  and are the main comnunication
+channel across the collaboration. 
 
 
- The organization only obtained local financing from the following institutions:
- 
- \begin{itemize}
-        \item The National University of Engineering (Vice-Rectorate for Research, Faculty of Sciences, and Patronato UNI) that financed the tickets, stay and travel expenses for four guests.
-        \item The National University of Trujillo and the Trujillana Astronomy Association (the latter is an amateur association), supported financially, also
-        \item The National Aerospace Research and Development Coordination (CONIDA).
-        Further,
-        \item The Regional Office of Astronomy for Development at the Andean Level of the International Astronomical Union resolved the accommodation for 10 students from Ecuador, Colombia, Venezuela, Argentina and the interior of Peru.
-        \item The committee apply for the call of Office of External Activities - International Center for Theoretical Physics (OAS-ICTP), but they do not get financing.
-\end{itemize}
-
-\begin{itemize}    
-    \item Another challenge was to get the participation of researchers, amateurs and students from all the Andean Node countries. No participants came from Bolivia, nor from Chile; I received emails of interest from Bolivia but only a few days before the start of the event, when they could not apply for financial support. In the case of Chile, there were two registered but did not get financing from their institutions. The publicity of the event did not reach everyone in a timely manner. Due to the lack of budget it could not have more invited researchers, except the invited exhibitors. It should be noted that the invited researchers from Colombia and Ecuador who exhibited fully paid for their trip.
-    
-    \item At the local level, there was no considerable participation of school teachers in the "Astronomy in school" mini-course as it was expected. There were very few registered and not all attended. In Peru, TF2 is not very developed and one of the objectives was to promote the interest of teachers in this area.
-    
-    \item The most numerous participation was that of university students followed by that of the fans and, finally, the professors. The scientific community in Astronomy in Peru is small, but most of them attended. 
-\end{itemize}
-
-%#######################################################
